extremely messy updates, not sure how i'm going to ever get this responsive

--- a/index.html
+++ b/index.html
@@ -8,15 +8,22 @@
 
 <body>
 
+<div class="parent">
   <nav>
+    <div id="logoblock">
       <img id="logo" src="pics/logo__abba.svg">
       <p>THE OFFICIAL SITE</p>
+    </div>
 
       <ul class = "navLinks">
         <li><a href="#">THE STORY</a></li>
         <li><a href="#">DISCOGRAPHY</a></li>
         <li><a href="#">ARTICLES</a></li>
         <li><a href="#">GOLDEN CLUB</a></li>
+        <li> </li>
+        <li><a href="#">LISTEN</a> </li> <img class="icon" src="pics/logo__linkfire.svg">
+        <li><a href="#">SHOP</a> </li> <img class="icon" src="pics/icon__shop.svg">
+        <li><button>SIGN IN</button></li>
       </ul>
 
     <div class = "burger">
@@ -25,18 +32,23 @@
       <div class = "line3"></div>
       <div class = "line4"></div>
     </div>
-
+    
   </nav>
-
-  <div class = "section1">
-    <p>...</p>
+  <div class="twothree" id="pictureblocks">
+      <img src="pics/newsletter-image-1.jpg">
   </div>
+  <div class="twothree" id="white zone">
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        In, repudiandae minima recusandae saepe vel veritatis sunt quos beatae debitis, 
+        molestiae aut praesentium aspernatur. Inventore facere ratione magni modi eligendi vel.
+    </p>
+</div>
 
-  <div class = "section2">
-    <p>...</p>
   </div>
-  
-  <script src="script.js"></script>
+</div>
+
+<script src="script.js"></script>
 </body>
+
 </html>
   
