reworked everything from zero, getting rid of flextrash and replacing with a neater hierarchy of grids

--- a/index.html
+++ b/index.html
@@ -7,45 +7,68 @@
 </head>
 
 <body>
+  <div class="parent">
 
-<div class="parent">
-  <nav>
-    <div id="logoblock">
-      <img id="logo" src="pics/logo__abba.svg">
-      <p>THE OFFICIAL SITE</p>
-    </div>
-
-      <ul class = "navLinks">
-        <li><a href="#">THE STORY</a></li>
-        <li><a href="#">DISCOGRAPHY</a></li>
-        <li><a href="#">ARTICLES</a></li>
-        <li><a href="#">GOLDEN CLUB</a></li>
-        <li> </li>
-        <li><a href="#">LISTEN</a> </li> <img class="icon" src="pics/logo__linkfire.svg">
-        <li><a href="#">SHOP</a> </li> <img class="icon" src="pics/icon__shop.svg">
-        <li><button>SIGN IN</button></li>
+    <div class="header">
+      <ul>
+        <li class="horizontalLis"><img id="abbaLogo" src="pics/logo__abba.svg"></li>
+        <li class="horizontalLis">THE STORY</li>
+        <li class="horizontalLis">DISCOGRAPHY</li>
+        <li class="horizontalLis">ARTICLES</li>
+        <li class="horizontalLis">GOLDEN CLUB</li>
+        <li class="horizontalLisRJ">LISTEN<img id="tinyLogo" src="pics/logo__linkfire.svg"></li>
+        <li class="horizontalLisRJ">SHOP<img id="tinyLogo" src="pics/icon__shop.svg"></li>
+        <li class="horizontalLisRJ"><button>SIGN IN</button></li>
       </ul>
 
-    <div class = "burger">
-      <div class = "line1"></div>
-      <div class = "line2"></div>
-      <div class = "line3"></div>
-      <div class = "line4"></div>
+    </div>
+
+    <div class="left-side"></div>
+
+    <div class="iframe">
+      <img id="abbaPhoto" src="pics/story-image-abba.jpg">
     </div>
     
-  </nav>
-  <div class="twothree" id="pictureblocks">
-      <img src="pics/newsletter-image-1.jpg">
-  </div>
-  <div class="twothree" id="white zone">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        In, repudiandae minima recusandae saepe vel veritatis sunt quos beatae debitis, 
-        molestiae aut praesentium aspernatur. Inventore facere ratione magni modi eligendi vel.
-    </p>
-</div>
+    <div class="right-side"></div>
+
+    <div class="fullWidthContent">
+      <p>
+        this is the fw content <br>
+        this is the fw content <br>
+        this is the fw content <br>
+      </p>
+    </div>
+
+    <div class="footer">
+
+      <div id=footerColumn1>
+        <ul>
+          <li class="flis">SPOTIFY</li>
+          <li class="flis">APPLE MUSIC</li>
+          <li class="flis">ITUNES</li>
+        </ul>
+      </div>
+
+      <div id=footerColumn2>
+        <ul>
+          <li class="flis">FACEBOOK</li>
+          <li class="flis">INSTAGRAM</li>
+          <li class="flis">YOUTUBE</li>
+          <li class="flis">TWITTER</li>
+        </ul>
+      </div>
+
+      <div id=footerColumn3>
+        <button>NEWSLETTER</button>
+      </div>
+      <p>Polar Music International AB<br>
+      Privacy Policy</p>
+
+    </div>
+
+
 
   </div>
-</div>
 
 <script src="script.js"></script>
 </body>
