--- a/index.html
+++ b/index.html
@@ -32,11 +32,40 @@
     <div class="right-side"></div>
 
     <div class="fullWidthContent">
-      <p>
-        this is the fw content <br>
-        this is the fw content <br>
-        this is the fw content <br>
-      </p>
+
+      <div></div>
+
+      <div class="contentCard">
+        <img class="cCImg" src="pics/newsletter-image-1.jpg">
+      </div>
+
+      <div class="contentCard">
+        <img class="cCImg" src="pics/newsletter-image-1.jpg">
+      </div>
+
+      <div class="contentCard">
+        <img class="cCImg" src="pics/newsletter-image-1.jpg">
+      </div>
+
+      <div></div>
+      <div></div>
+
+      <div class="contentCard">
+        <img class="cCImg" src="pics/newsletter-image-1.jpg">
+      </div>
+
+      <div class="contentCard">
+        <img class="cCImg" src="pics/newsletter-image-1.jpg">
+      </div>
+
+      <div class="contentCard">
+        <img class="cCImg" src="pics/newsletter-image-1.jpg">
+      </div>
+
+      <div></div>
+
+      
+
     </div>
 
     <div class="footer">
