found some margins and paddings that were throwing off my grid

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">  
+<html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>ABBA | ABBA</title>
@@ -28,43 +29,35 @@
     <div class="iframe">
       <img id="abbaPhoto" src="pics/story-image-abba.jpg">
     </div>
-    
+
     <div class="right-side"></div>
 
     <div class="fullWidthContent">
 
-      <div></div>
-
+      <div class="contentCard">
+        <img class="cCImg" src="pics/bluevelvet.jpg">
+        <p>Follow the band as they take you through the streets of Stockholm on a tour of their neighborhood!</p>
+      </div>
+      <div class="contentCard">
+        <img class="cCImg" src="pics/waxfigures.jpg">
+        <p>Learn the lyrics to you favorite songs</p>
+      </div>
       <div class="contentCard">
         <img class="cCImg" src="pics/newsletter-image-1.jpg">
+        <p>Support the Band!<br>Buy a lot of merchandise!</p>
       </div>
-
       <div class="contentCard">
         <img class="cCImg" src="pics/newsletter-image-1.jpg">
+        <p>A!</p>
       </div>
-
       <div class="contentCard">
         <img class="cCImg" src="pics/newsletter-image-1.jpg">
+        <p>B!</p>
       </div>
-
-      <div></div>
-      <div></div>
-
       <div class="contentCard">
         <img class="cCImg" src="pics/newsletter-image-1.jpg">
+        <p>C!</p>
       </div>
-
-      <div class="contentCard">
-        <img class="cCImg" src="pics/newsletter-image-1.jpg">
-      </div>
-
-      <div class="contentCard">
-        <img class="cCImg" src="pics/newsletter-image-1.jpg">
-      </div>
-
-      <div></div>
-
-      
 
     </div>
 
@@ -72,18 +65,18 @@
 
       <div id=footerColumn1>
         <ul>
-          <li class="flis">SPOTIFY</li>
-          <li class="flis">APPLE MUSIC</li>
-          <li class="flis">ITUNES</li>
+          <li class="flis">SPOTIFY <img class="tinyLogo" src="pics/logo__spotify.svg"></li>
+          <li class="flis">APPLE MUSIC <img class="tinyLogo" src="pics/logo__apple.svg"></li>
+          <li class="flis">ITUNES <img class="tinyLogo" src="pics/logo__itunes.svg"></li>
         </ul>
       </div>
 
       <div id=footerColumn2>
         <ul>
-          <li class="flis">FACEBOOK</li>
-          <li class="flis">INSTAGRAM</li>
-          <li class="flis">YOUTUBE</li>
-          <li class="flis">TWITTER</li>
+          <li class="flis">FACEBOOK <img class="tinyLogo" src="pics/logo__facebook.svg"></li>
+          <li class="flis">INSTAGRAM <img class="tinyLogo" src="pics/logo__instagram.svg"></li>
+          <li class="flis">YOUTUBE <img class="tinyLogo" src="pics/logo__youtube.svg"></li>
+          <li class="flis">TWITTER <img class="tinyLogo" src="pics/logo__twitter.svg"></li>
         </ul>
       </div>
 
@@ -91,7 +84,7 @@
         <button>NEWSLETTER</button>
       </div>
       <p>Polar Music International AB<br>
-      Privacy Policy</p>
+        Privacy Policy</p>
 
     </div>
 
@@ -99,8 +92,7 @@
 
   </div>
 
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
-  
