added some varied photos, and text

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <li class="horizontalLisRJ"><button>SIGN IN</button></li>
       </ul>
 
+      
+
     </div>
 
     <div class="left-side"></div>
@@ -36,27 +38,33 @@
 
       <div class="contentCard">
         <img class="cCImg" src="pics/bluevelvet.jpg">
+        <hr>
         <p>Follow the band as they take you through the streets of Stockholm on a tour of their neighborhood!</p>
       </div>
       <div class="contentCard">
         <img class="cCImg" src="pics/waxfigures.jpg">
-        <p>Learn the lyrics to you favorite songs</p>
+        <hr>
+        <p>Learn the lyrics to your favorite songs.</p>
       </div>
       <div class="contentCard">
         <img class="cCImg" src="pics/newsletter-image-1.jpg">
+        <hr>
         <p>Support the Band!<br>Buy a lot of merchandise!</p>
       </div>
       <div class="contentCard">
-        <img class="cCImg" src="pics/newsletter-image-1.jpg">
-        <p>A!</p>
+        <img class="cCImg" src="pics/waterloo.jpg">
+        <hr>
+        <p>The album that started it all... for you.</p>
       </div>
       <div class="contentCard">
-        <img class="cCImg" src="pics/newsletter-image-1.jpg">
-        <p>B!</p>
+        <img class="cCImg" src="pics/horrifyingpuppets.jpg">
+        <hr>
+        <p>Horrifying murderous puppets resembling ABBA invade provincial Swedish town.</p>
       </div>
       <div class="contentCard">
-        <img class="cCImg" src="pics/newsletter-image-1.jpg">
-        <p>C!</p>
+        <img class="cCImg" src="pics/bjornulvaeus.jpg">
+        <hr>
+        <p>Interview with the legendary producer Bjorn Ulvaeus.</p>
       </div>
 
     </div>
