--- a/index.html
+++ b/index.html
@@ -35,67 +35,69 @@
     <div class="right-side"></div>
 
     <div class="fullWidthContent">
-
-      <div class="contentCard">
-        <img class="cCImg" src="pics/bluevelvet.jpg">
-        <hr>
-        <p>Follow the band as they take you through the streets of Stockholm on a tour of their neighborhood!</p>
+      <div class="cardContainer">
+        <div class="contentCard">
+          <img class="cCImg" src="pics/bluevelvet.jpg">
+          <hr>
+          <p>Follow the band as they take you through the streets of Stockholm on a tour of their neighborhood!</p>
+        </div>
+        <div class="contentCard">
+          <img class="cCImg" src="pics/waxfigures.jpg">
+          <hr>
+          <p>Learn the lyrics to your favorite songs.</p>
+        </div>
+        <div class="contentCard">
+          <img class="cCImg" src="pics/newsletter-image-1.jpg">
+          <hr>
+          <p>Support the Band!<br>Buy a lot of merchandise!</p>
+        </div>
+        <div class="contentCard">
+          <img class="cCImg" src="pics/waterloo.jpg">
+          <hr>
+          <p>The album that started it all... for you.</p>
+        </div>
+        <div class="contentCard">
+          <img class="cCImg" src="pics/horrifyingpuppets.jpg">
+          <hr>
+          <p>Horrifying murderous puppets resembling ABBA invade provincial Swedish town.</p>
+        </div>
+        <div class="contentCard">
+          <img class="cCImg" src="pics/bjornulvaeus.jpg">
+          <hr>
+          <p>Interview with the legendary producer Bjorn Ulvaeus.</p>
+        </div>
       </div>
-      <div class="contentCard">
-        <img class="cCImg" src="pics/waxfigures.jpg">
-        <hr>
-        <p>Learn the lyrics to your favorite songs.</p>
-      </div>
-      <div class="contentCard">
-        <img class="cCImg" src="pics/newsletter-image-1.jpg">
-        <hr>
-        <p>Support the Band!<br>Buy a lot of merchandise!</p>
-      </div>
-      <div class="contentCard">
-        <img class="cCImg" src="pics/waterloo.jpg">
-        <hr>
-        <p>The album that started it all... for you.</p>
-      </div>
-      <div class="contentCard">
-        <img class="cCImg" src="pics/horrifyingpuppets.jpg">
-        <hr>
-        <p>Horrifying murderous puppets resembling ABBA invade provincial Swedish town.</p>
-      </div>
-      <div class="contentCard">
-        <img class="cCImg" src="pics/bjornulvaeus.jpg">
-        <hr>
-        <p>Interview with the legendary producer Bjorn Ulvaeus.</p>
-      </div>
-
     </div>
 
     <div class="footer">
+      <div class="footerColumnContainer">
+        <div id=footerColumn1>
+          <ul>
+            <li class="flis">SPOTIFY <img class="tinyLogo" src="pics/logo__spotify.svg"></li>
+            <li class="flis">APPLE MUSIC <img class="tinyLogo" src="pics/logo__apple.svg"></li>
+            <li class="flis">ITUNES <img class="tinyLogo" src="pics/logo__itunes.svg"></li>
+          </ul>
+        </div>
 
-      <div id=footerColumn1>
-        <ul>
-          <li class="flis">SPOTIFY <img class="tinyLogo" src="pics/logo__spotify.svg"></li>
-          <li class="flis">APPLE MUSIC <img class="tinyLogo" src="pics/logo__apple.svg"></li>
-          <li class="flis">ITUNES <img class="tinyLogo" src="pics/logo__itunes.svg"></li>
-        </ul>
+        <div id=footerColumn2>
+          <ul>
+            <li class="flis">FACEBOOK <img class="tinyLogo" src="pics/logo__facebook.svg"></li>
+            <li class="flis">INSTAGRAM <img class="tinyLogo" src="pics/logo__instagram.svg"></li>
+            <li class="flis">YOUTUBE <img class="tinyLogo" src="pics/logo__youtube.svg"></li>
+            <li class="flis">TWITTER <img class="tinyLogo" src="pics/logo__twitter.svg"></li>
+          </ul>
+        </div>
+
+        <div id=footerColumn3>
+          <button>NEWSLETTER</button>
+        </div>
+
       </div>
 
-      <div id=footerColumn2>
-        <ul>
-          <li class="flis">FACEBOOK <img class="tinyLogo" src="pics/logo__facebook.svg"></li>
-          <li class="flis">INSTAGRAM <img class="tinyLogo" src="pics/logo__instagram.svg"></li>
-          <li class="flis">YOUTUBE <img class="tinyLogo" src="pics/logo__youtube.svg"></li>
-          <li class="flis">TWITTER <img class="tinyLogo" src="pics/logo__twitter.svg"></li>
-        </ul>
-      </div>
-
-      <div id=footerColumn3>
-        <button>NEWSLETTER</button>
-      </div>
-      <p>Polar Music International AB<br>
+      <br><p>Polar Music International AB © 2020<br>
         Privacy Policy</p>
 
     </div>
-
   </div>
 
   <script src="script.js"></script>
