added two media query responsivenesses

--- a/index.html
+++ b/index.html
@@ -11,18 +11,25 @@
   <div class="parent">
 
     <div class="header">
-      <ul>
+      <ul id="hideList">
         <li class="horizontalLis"><img id="abbaLogo" src="pics/logo__abba.svg"></li>
-        <li class="horizontalLis">THE STORY</li>
-        <li class="horizontalLis">DISCOGRAPHY</li>
-        <li class="horizontalLis">ARTICLES</li>
-        <li class="horizontalLis">GOLDEN CLUB</li>
-        <li class="horizontalLisRJ">LISTEN<img id="tinyLogo" src="pics/logo__linkfire.svg"></li>
-        <li class="horizontalLisRJ">SHOP<img id="tinyLogo" src="pics/icon__shop.svg"></li>
-        <li class="horizontalLisRJ"><button>SIGN IN</button></li>
+        <li class="horizontalLis"><a href="#">THE STORY</a></li>
+        <li class="horizontalLis"><a href="#">DISCOGRAPHY</a></li>
+        <li class="horizontalLis"><a href="#">ARTICLES</a></li>
+        <li class="horizontalLis"><a href="#">GOLDEN CLUB</a></li>
+        <li class="horizontalLis"><a href="#" class="orangeLinks">LISTEN</a><img id="tinyLogo" src="pics/logo__linkfire.svg"></li>
+        <li class="horizontalLis"><a href="#" class="orangeLinks">SHOP</a><img id="tinyLogo" src="pics/icon__shop.svg"></li>
+        <li class="horizontalLis"><button>SIGN IN</button></li>
       </ul>
 
+      <img class = "HIDDEN" id="hiddenLogo" src="pics/logo__abba.svg">
 
+      <div class = "burger HIDDEN">
+        <div class = "line1"></div>
+        <div class = "line2"></div>
+        <div class = "line3"></div>
+        <div class = "line4"></div>
+      </div>
 
     </div>
 
@@ -89,13 +96,13 @@
         </div>
 
         <div id=footerColumn3>
-          <button>NEWSLETTER</button>
+          <button class="flis">NEWSLETTER</button>
         </div>
 
       </div>
-
-      <br><p>Polar Music International AB © 2020<br>
-        Privacy Policy</p>
+      
+      <br>
+      <p id="footerText"> Polar Music International AB © 2020 Privacy Policy </p>
 
     </div>
   </div>
