altered the footer so that the social media logos remain but the text disappears

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
         <li class="horizontalLis"><a href="#">DISCOGRAPHY</a></li>
         <li class="horizontalLis"><a href="#">ARTICLES</a></li>
         <li class="horizontalLis"><a href="#">GOLDEN CLUB</a></li>
-        <li class="horizontalLis"><a href="#" class="orangeLinks">LISTEN</a><img id="tinyLogo" src="pics/logo__linkfire.svg"></li>
-        <li class="horizontalLis"><a href="#" class="orangeLinks">SHOP</a><img id="tinyLogo" src="pics/icon__shop.svg"></li>
+        <li class="horizontalLis"> </li>
+        <li class="horizontalLis"> </li>
+        <li class="horizontalLis"> </li>
+        <li class="horizontalLis"> </li>
+        <li class="horizontalLis"><a href="#" class="orangeLinks">LISTEN</a><img class="tinyLogoTOP" src="pics/logo__linkfire.svg"></li>
+        <li class="horizontalLis"><a href="#" class="orangeLinks">SHOP</a><img class="tinyLogoTOP" src="pics/icon__shop.svg"></li>
         <li class="horizontalLis"><button>SIGN IN</button></li>
       </ul>
 
@@ -80,18 +84,18 @@
       <div class="footerColumnContainer">
         <div id=footerColumn1>
           <ul>
-            <li class="flis">SPOTIFY <img class="tinyLogo" src="pics/logo__spotify.svg"></li>
-            <li class="flis">APPLE MUSIC <img class="tinyLogo" src="pics/logo__apple.svg"></li>
-            <li class="flis">ITUNES <img class="tinyLogo" src="pics/logo__itunes.svg"></li>
+            <li class="flis"><span class="hideSMWord">SPOTIFY</span><img class="tinyLogoBOTTOM" src="pics/logo__spotify.svg"></li>
+            <li class="flis"><span class="hideSMWord">APPLE MUSIC</span><img class="tinyLogoBOTTOM" src="pics/logo__apple.svg"></li>
+            <li class="flis"><span class="hideSMWord">ITUNES</span></span><img class="tinyLogoBOTTOM" src="pics/logo__itunes.svg"></li>
           </ul>
         </div>
 
         <div id=footerColumn2>
           <ul>
-            <li class="flis">FACEBOOK <img class="tinyLogo" src="pics/logo__facebook.svg"></li>
-            <li class="flis">INSTAGRAM <img class="tinyLogo" src="pics/logo__instagram.svg"></li>
-            <li class="flis">YOUTUBE <img class="tinyLogo" src="pics/logo__youtube.svg"></li>
-            <li class="flis">TWITTER <img class="tinyLogo" src="pics/logo__twitter.svg"></li>
+            <li class="flis"><span class="hideSMWord">FACEBOOK</span><img class="tinyLogoBOTTOM" src="pics/logo__facebook.svg"></li>
+            <li class="flis"><span class="hideSMWord">INSTAGRAM</span><img class="tinyLogoBOTTOM" src="pics/logo__instagram.svg"></li>
+            <li class="flis"><span class="hideSMWord">YOUTUBE</span><img class="tinyLogoBOTTOM" src="pics/logo__youtube.svg"></li>
+            <li class="flis"><span class="hideSMWord">TWITTER</span><img class="tinyLogoBOTTOM" src="pics/logo__twitter.svg"></li>
           </ul>
         </div>
 
