minor tweaks to the breakpoints

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="header">
       <ul id="hideList">
         <li class="horizontalLis"><img id="abbaLogo" src="pics/logo__abba.svg"></li>
+        <li class="horizontalLis"> </li>
         <li class="horizontalLis"><a href="#">THE STORY</a></li>
         <li class="horizontalLis"><a href="#">DISCOGRAPHY</a></li>
         <li class="horizontalLis"><a href="#">ARTICLES</a></li>
