more messing with breakpoints, fixed the sizing issue with the cards

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>ABBA | ABBA</title>
+  <title>ABBA | Home</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -41,7 +41,11 @@
     <div class="left-side"></div>
 
     <div class="iframe">
+      <div class="arrowHolder">
+        <p id="overImageText"> ← <span id="overImageText2"> → </span></p>
+      </div>
       <img id="abbaPhoto" src="pics/story-image-abba.jpg">
+      
     </div>
 
     <div class="right-side"></div>
@@ -51,31 +55,37 @@
         <div class="contentCard">
           <img class="cCImg" src="pics/bluevelvet.jpg">
           <hr>
+          <h4>Take a Tour</h4>
           <p>Follow the band as they take you through the streets of Stockholm on a tour of their neighborhood!</p>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/waxfigures.jpg">
           <hr>
+          <h4>Mamma Mia!</h4>
           <p>Learn the lyrics to your favorite songs.</p>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/newsletter-image-1.jpg">
           <hr>
+          <h4>New Online Shop</h4>
           <p>Support the Band!<br>Buy a lot of merchandise!</p>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/waterloo.jpg">
           <hr>
+          <h4>Double Platinum!</h4>
           <p>The album that started it all... for you.</p>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/horrifyingpuppets.jpg">
           <hr>
+          <h4>Gimme, Gimme, Gimme!</h4>
           <p>Horrifying murderous puppets resembling ABBA invade provincial Swedish town.</p>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/bjornulvaeus.jpg">
           <hr>
+          <h4>Bjorn</h4>
           <p>Interview with the legendary producer Bjorn Ulvaeus.</p>
         </div>
       </div>
