added a new 'card style' called contentBanner (rather than contentCard) that spans the container in the second main section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="header">
       <ul id="hideList">
-        <li class="horizontalLis"><img id="abbaLogo" src="pics/logo__abba.svg"></li>
+        <li class="horizontalLis"><div id="logoBlock"><img id="abbaLogo" src="pics/logo__abba.svg"><span id="officialText"></span></div></li>
         <li class="horizontalLis"> </li>
         <li class="horizontalLis"><a href="#">THE STORY</a></li>
         <li class="horizontalLis"><a href="#">DISCOGRAPHY</a></li>
@@ -42,7 +42,7 @@
 
     <div class="iframe">
       <div class="arrowHolder">
-        <p id="overImageText"> ← <span id="overImageText2"> → </span></p>
+        <p id="overImageText"> ‹ <span id="overImageText2"> › </span></p>
       </div>
       <img id="abbaPhoto" src="pics/story-image-abba.jpg">
       
@@ -51,43 +51,65 @@
     <div class="right-side"></div>
 
     <div class="fullWidthContent">
+      <span id="featuredText">F E A T U R E D </span>
       <div class="cardContainer">
         <div class="contentCard">
           <img class="cCImg" src="pics/bluevelvet.jpg">
           <hr>
-          <h4>Take a Tour</h4>
+          <h4>TAKE A TOUR</h4>
           <p>Follow the band as they take you through the streets of Stockholm on a tour of their neighborhood!</p>
+          <h5>Read More...</h5>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/waxfigures.jpg">
           <hr>
-          <h4>Mamma Mia!</h4>
+          <h4>MAMMA MIA!</h4>
           <p>Learn the lyrics to your favorite songs.</p>
+          <h5>Read More...</h5>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/newsletter-image-1.jpg">
           <hr>
-          <h4>New Online Shop</h4>
+          <h4>NEW ONLINE SHOP</h4>
           <p>Support the Band!<br>Buy a lot of merchandise!</p>
+          <h5>Read More...</h5>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/waterloo.jpg">
           <hr>
-          <h4>Double Platinum!</h4>
+          <h4>DOUBLE PLATINUM!</h4>
           <p>The album that started it all... for you.</p>
+          <h5>Read More...</h5>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/horrifyingpuppets.jpg">
           <hr>
-          <h4>Gimme, Gimme, Gimme!</h4>
+          <h4>GIMME GIMME GIMME!</h4>
           <p>Horrifying murderous puppets resembling ABBA invade provincial Swedish town.</p>
+          <h5>Read More...</h5>
         </div>
         <div class="contentCard">
           <img class="cCImg" src="pics/bjornulvaeus.jpg">
           <hr>
-          <h4>Bjorn</h4>
+          <h4>BJORN</h4>
           <p>Interview with the legendary producer Bjorn Ulvaeus.</p>
+          <h5>Read More...</h5>
         </div>
+
+        <div class="contentBanner">
+          <hr>
+          <h4>TOUR DATES</h4>
+          <p>Meet ABBA at the airport and stalk them all the way to their hotel.</p>
+          <h5>Read More...</h5>
+        </div>
+
+        <div class="contentBanner">
+          <hr>
+          <h4>ABBA THE MOVIE ON DVD</h4>
+          <p>It runs with a bunch of unskippable movie trailers... sorry.</p>
+          <h5>Read More...</h5>
+        </div>
+
       </div>
     </div>
 
