flashy hover stuff

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <li class="horizontalLis"> </li>
         <li class="horizontalLis"><a href="#" class="orangeLinks">LISTEN</a><img class="tinyLogoTOP" src="pics/logo__linkfire.svg"></li>
         <li class="horizontalLis"><a href="#" class="orangeLinks">SHOP</a><img class="tinyLogoTOP" src="pics/icon__shop.svg"></li>
-        <li class="horizontalLis"><button>SIGN IN</button></li>
+        <li class="horizontalLis"><button onclick="sampleFunction()">SIGN IN</button></li>
       </ul>
 
       <img class = "HIDDEN" id="hiddenLogo" src="pics/logo__abba.svg">
@@ -133,7 +133,7 @@
         </div>
 
         <div id=footerColumn3>
-          <button class="flis">NEWSLETTER</button>
+          <button class="flis" onclick="sampleFunction()">NEWSLETTER</button>
         </div>
 
       </div>
