--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8" />
   <title>ABBA | Home</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="icon" type="image/png" href="pics/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="pics/favicon-16x16.png" sizes="16x16">
 </head>
 
 <body>
