altered the grid layout in the third part of the webpage, adding two cards and filling out the text boxes with some lorem

--- a/index.html
+++ b/index.html
@@ -98,18 +98,34 @@
           <h5>Read More...</h5>
         </div>
 
-        <div class="contentBanner">
+        <div class="contentCardMonochrome">
+          <br>
+          <h4>Calendar</h4>
+          <p>See when ABBA is coming to your town.</p>
+          <h5>Buy Tickets...</h5>
+        </div>
+
+        <div class="contentBanner1">
           <hr>
           <h4>TOUR DATES</h4>
           <p>Meet ABBA at the airport and stalk them all the way to their hotel.</p>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est nisi itaque molestias veritatis accusantium quidem recusandae magnam provident asperiores quibusdam id, eveniet dolor voluptatem laudantium doloribus porro et nemo deleniti.</p>
           <h5>Read More...</h5>
         </div>
 
-        <div class="contentBanner">
+        <div class="contentBanner2">
           <hr>
           <h4>ABBA THE MOVIE ON DVD</h4>
           <p>It runs with a bunch of unskippable movie trailers... sorry.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut a esse, voluptas sint rem eaque, tenetur harum placeat quibusdam ratione alias, rerum et ipsa velit asperiores fuga expedita laudantium omnis.</p>
           <h5>Read More...</h5>
+        </div>
+
+        <div class="contentCardMonochrome">
+          <br>
+          <h4>ABBA Trivia!</h4>
+          <p>What year did Waterloo go Platinum?</p>
+          <h5>Take our Quiz...</h5>
         </div>
 
       </div>
