--- a/ABBA oldsite/index.html
+++ b/ABBA oldsite/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Matthew Lewis</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/style.css">
 </head>
   
 <body>
@@ -15,10 +15,10 @@
     </div>
     <div>
       <ul class = "navLinks">
-        <li><a href="#">home  </a></li>
-        <li><a href="#">about </a></li>
-        <li><a href="#">work  </a></li>
-        <li><a href="#">play  </a></li>
+        <li><a href="#">home</li>
+        <li><a href="#">about</li>
+        <li><a href="#">work</li>
+        <li><a href="#">play</li>
       </ul>
     </div>
       <div class = "burger">
@@ -29,11 +29,9 @@
       </div>
   </nav>
   <div class = "summary">
-    <p>A</p>
-    <p>B</p>
+    <p>i work faster in html and css than your ux artists do in figma</p>
+    <p>skills: javascript, react, git, adobe suite, maya, blender, unity</p>
   </div>
-  <script src="./script.js"></script>
 </body>
-</html>
   
   
