--- a/index.html
+++ b/index.html
@@ -1,39 +1,205 @@
 <!DOCTYPE html>
 <html lang="en">
-<link href='https://fonts.googleapis.com/css?family=Major Mono Display' rel='stylesheet'>
-  
-<head>
-  <meta charset="UTF-8" />
-  <title>Matthew Lewis</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-  
-<body>
-  <nav>
-    <div class ="logo">
-      <h4>matthew lewis</h4>
-    </div>
-    <div>
-      <ul class = "navLinks">
-        <li><a href="#">home  </a></li>
-        <li><a href="#">about </a></li>
-        <li><a href="#">work  </a></li>
-        <li><a href="#">play  </a></li>
-      </ul>
-    </div>
-      <div class = "burger">
-        <div class = "line1"></div>
-        <div class = "line2"></div>
-        <div class = "line3"></div>
-        <div class = "line4"></div>
-      </div>
-  </nav>
-  <div class = "summary">
-    <p>A</p>
-    <p>B</p>
-  </div>
-  <script src="./script.js"></script>
-</body>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <title>Portfolio - Matthew Lewis</title>
+        <!-- Favicon-->
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <!-- Font Awesome icons (free version)-->
+        <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
+        <!-- Google fonts-->
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <!-- Third party plugin CSS-->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
+        <!-- Core theme CSS (includes Bootstrap)-->
+        <link href="css/styles.css" rel="stylesheet" />
+    </head>
+    <body id="page-top">
+        <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+            <div class="container">
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">Matthew Lewis</a>
+                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse" id="navbarResponsive">
+                    <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Skills</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container h-100">
+                <div class="row h-100 align-items-center justify-content-center text-center">
+                    <div class="col-lg-10 align-self-end">
+                        <h1 class="text-white font-weight-bold">I can't help it!</h1>
+                        <hr class="divider my-4" />
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <p class="text-white-75 font-weight-light mb-5">Army linguist and 3D animator turned software dev</p>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- Services-->
+        <section class="page-section" id="services">
+            <div class="container">
+                <h2 class="text-center mt-0">Skills</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-html5 text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">HTML5</h3>
+                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-js-square text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Javascript</h3>
+                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-python text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Python</h3>
+                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-copyright text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">C #</h3>
+                            <p class="text-muted mb-0">Blurb about my skills in this tech</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-5 text-center">
+                <p class="text-muted">And many more!</p>
+                <i title="ReactJS" class="mr-3 fab fa-2x fa-react text-primary mb-4"></i>
+                <i title="NodeJS" class="mr-3 fab fa-2x fa-node text-primary mb-4"></i>
+                <i title="CSS 3" class="mr-3 fab fa-2x fa-css3-alt text-primary mb-4"></i>
+                <i title="Git" class="mr-3 fab fa-2x fa-git-square text-primary mb-4"></i>
+                <i title="Github" class="mr-3 fab fa-2x fa-github text-primary mb-4"></i>
+                <i title="Linux" class="mr-3 fab fa-2x fa-linux text-primary mb-4"></i>
+                <i title="Ubuntu" class="mr-3 fab fa-2x fa-ubuntu text-primary mb-4"></i>
+                <i title="Unity Engine" class="mr-3 fab fa-2x fa-unity text-primary mb-4"></i>
+                <i title="Figma" class="mr-3 fab fa-2x fa-figma text-primary mb-4"></i>
+                <i title="Discord Oauth2" class="mr-3 fab fa-2x fa-discord text-primary mb-4"></i>
+                <i title="Bootstrap" class="mr-3 fab fa-2x fa-bootstrap text-primary mb-4"></i>
+            </div>
+        </section>
+        <!-- Portfolio-->
+        <div id="portfolio">
+            <div class="container-fluid p-0">
+                <div class="row no-gutters">
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.png" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Productivity</div>
+                                <div class="project-name">Problem Ticket Submitter</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.png" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">RESTful API</div>
+                                <div class="project-name">GunAPI - The Gundam API</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.png" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">MVC / Games</div>
+                                <div class="project-name">King of the Iceberg</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.png">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.png" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">3D Animation / Unity</div>
+                                <div class="project-name">Project September</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                            <div class="portfolio-box-caption">
+                                <div class="project-category text-white-50">Python and GUI</div>
+                                <div class="project-name">Traveller Character Generator</div>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col-lg-4 col-sm-6">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
+                            <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                            <div class="portfolio-box-caption p-3">
+                                <div class="project-category text-white-50">MERN Stack</div>
+                                <div class="project-name">Final Project</div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="page-section" id="contact">
+            <div class="container">
+                <h2 class="text-center mt-0">Contact</h2>
+                <hr class="divider my-4" />
+                <div class="row">
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-github text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Github</h3>
+                            <p class="text-muted mb-0">github.com/MatthewKLewis</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fab fa-4x fa-linkedin-in text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">LinkedIn</h3>
+                            <p class="text-muted mb-0">www.linkedin.com/in/matthew-lewis-4695391b5/</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-envelope text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Email</h3>
+                            <p class="text-muted mb-0">matthew.knight.lewis@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 text-center">
+                        <div class="mt-5">
+                            <i class="fas fa-4x fa-info text-primary mb-4"></i>
+                            <h3 class="h4 mb-2">Indeed Resume</h3>
+                            <p class="text-muted mb-0">my.indeed.com/p/matthewl-r9gbky9</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Bootstrap core JS-->
+        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+        <!-- Third party plugin JS-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+        <!-- Core theme JS-->
+        <script src="js/scripts.js"></script>
+    </body>
 </html>
-  
-  
